se agergo css al debug

--- a/core/stylus/debug/base.styl
+++ b/core/stylus/debug/base.styl
@@ -1,20 +1,37 @@
 #debug
-	text-align center
-	display    none
-	.articles
-		display    inline-block
-		width      28%
-		background rgba(fondo,.6)
-		color      text
+	display none
+	border 1px solid border
+	.header_debug
+		width 100%
+		color text
 		text-align left
-		.header
-			padding 5px 5px
-			border  1px solid border
-		.body
-			padding       5px 5px
-			border-left   1px solid border
-			border-bottom 1px solid border
-			border-right  1px solid border
-	.core
-		width 16%
+		span
+			margin-left 10px
+			font-size 0.9em
+	.content_debug
+		display flex
+		flex-flow row wrap
+		.articles
+			flex 1 1 28%
+			align-self stretch
+			border-right 1px solid border
+			background rgba(fondo,.6)
+			color      text
+			.header
+				border-top 1px solid border
+				padding 5px 5px
+				font-size 0.9em
+			.body
+				display flex
+				flex-flow row wrap
+				border-top 1px solid border
+				padding 0px 5px
+				font-size 0.8em
+				span
+					flex 1 1 100%
+					padding 5px 0px
+		.core
+			flex 16 1 auto
+		@media all and (max-width: 640px)
+			flex-flow column
 			
