se modifico el core para soportar clases

--- a/core/stylus/A-settings.styl
+++ b/core/stylus/A-settings.styl
@@ -1,4 +1,1 @@
-font-size     = 16px    
-fondo         = #000   //PARA FONDO DEL DEBUG
-text          = #FFF //PARA TEXTOS DEL DEBUG
-border        = #898989 //PARA BORDES
+fondo = #000
